noinst_PROGRAMS = ramscripts
ramscripts_SOURCES = ramscripts.cc
EXTRA_DIST = README ramscripts-win32.cpp \
	makefile.compressor depend.dep compressedfiles.cpp \
	README.LZO lzoconf.h minilzo.c minilzo.h decompressor.cpp \
	compressor.cpp filescanner.cpp filescanner.h \
	test.sh README.compressor compressedfiles.h compress.bat \
	compressor.dsp compressor.dsw



