EXTRA_DIST = arithmetic.yts c_tex_form.yts calculus.yts canprove.yts \
	comments.yts deriv.yts integrate.yts linalg.yts lists.yts \
	logic_simplify_test.yts numerics.yts orthopoly.yts poly.yts predicates.yts \
	programming.yts radsimp.yts regress.yts simplify.yts solve.yts sums.yts \
	tensors.yts multivar.yts
